Renommage de la clé API et refactorisation des modèles
Modifications apportées pour renommer `OpenAIKey` en `APIKey` dans l'ensemble de l'application, avec des mises à jour des fichiers de configuration et des ressources localisées. La classe `GPTModel` a été supprimée et remplacée par `ChatModel` pour gérer les modèles de chat d'OpenAI et d'Anthropic. Les méthodes de l'`OpenAIClient` ont été adaptées pour utiliser la nouvelle interface `IAIProviderService`. Les liaisons de données dans l'interface utilisateur ont également été mises à jour pour refléter ces changements.

--- a/App.config
+++ b/App.config
@@ -7,8 +7,8 @@
   </configSections>
   <userSettings>
     <WinPilot.Properties.Settings>
-      <setting name="OpenAIKey" serializeAs="String">
-        <value>YOUR_API_KEY_HERE</value>
+      <setting name="APIKey" serializeAs="String">
+        <value />
       </setting>
       <setting name="SelectedModel" serializeAs="String">
         <value>gpt-4o-mini</value>
